<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_title" />

            <EditText
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/input_register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_detail" />

            <EditText
                android:id="@+id/detail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/input_register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_max_member" />

            <EditText
                android:id="@+id/max_member"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="number"
                android:textColor="@color/input_register" />

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_category" />

            <Spinner
                android:id="@+id/spin_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_start_date" />

                    <Button
                        android:id="@+id/btnDateStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tarih Seç"/>

                    <TextView
                        android:id="@+id/text_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="right"
                    android:gravity="right">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_end_date" />

                    <Button
                        android:id="@+id/btnDateEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tarih Seç"/>

                    <TextView
                        android:id="@+id/text_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>

                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btnCreateActivity"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Devam Et"
                android:padding="10dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>