<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    tools:context="net.simplifiedcoding.mysqlcrud.ViewEmployee"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kullanıcı Adı" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:id="@+id/editTextUsername" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="İsim Soyisim" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextEmail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Telefon" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPhone" />


        <RadioGroup
            android:id="@+id/sex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/r1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex1" />
            <RadioButton
                android:id="@+id/r2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex2"/>

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update_profile"
            android:id="@+id/buttonUpdate" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
